fixed home.html favicon links, removed spacing from sublime-attitudes.html, and added <p>, <h1> and <h2> styling

--- a/css/global.css
+++ b/css/global.css
@@ -8,17 +8,16 @@ body {
   background-color: #EEEEEE;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 
-}
-/*p { line-height: 1.9; }
-h1 {
-  padding-bottom: 3%;
 
+}
+p { line-height: 1.9; }
+h1 {
+  /*padding-bottom: 3%;*/
   font-weight: 900;
   line-height: 1.3;
 }
 h2 {
-  padding-bottom: 3%;
-
+  /*padding-bottom: 3%;*/
   font-weight: 600;
   line-height: 1.3;
 }*/
@@ -36,7 +35,7 @@ h2 {
     background-color: transparent;
     box-shadow: none;
   }
-  .material-icons { color: black; }
+  .material-icons { color: rgba(0, 0, 0, 0.54);  }
 }
 
 /**
